--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <header>
       <nav>
               <div class="logo">
-                  <img src="assets/Logo.png">
+                  <img src="assets/logo.png">
               </div>
                 <div class="navbar">
                   <div class="icons">
