--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FoodCity</title>
     <link rel="stylesheet" href="home/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +38,7 @@
                       <li> <a href="#about-us"> About Us</a></li>
                       <li> <a href="#meals">Meals</a></li>
                       <li> <a href="#our-experts"> Our Experts</a></li>
-                      <li> <a href="#">Contact Us</a></li>
+                      <li> <a href="#contact-us">Contact Us</a></li>
                     </ul>
                    </div>
        </nav>
