--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
        </nav>
       </header>
   <!-- End Header -->
+  <!-- Start Home Section -->
+  <section id="home">
+    <h2 class="title-home">Welcome to</h2>
+    <h1 class="title-resturaunt">FoodCity</h1>
+    <button class="btn"><a href="home.html">Go to Menu</a></button>
+</section>
+<!-- End Home Section -->
     <script src="home/index.js"></script>
 </body>
 </html>
