About Us Section Relates #12

--- a/index.html
+++ b/index.html
@@ -51,6 +51,20 @@
     <button class="btn"><a href="home.html">Go to Menu</a></button>
 </section>
 <!-- End Home Section -->
+
+<!-- Start About Us Section  -->
+    <section id="about-us">
+      <div class="image">
+        <img class="chef" src="assets/chef.jpg" alt="Chef Photo"/>
+      </div>
+      <div class="text">
+        <h1>About Us</h1>
+        <p>Restaurant is a place for simplicity. Good food, and good service. 
+          Simple is the name of the game, and we’re good at finding it in all the right places,
+          even in your dining experience. We’re a small group from Denver.</p>
+      </div>
+    </section>
+    <!-- End About Us Section  -->
     <script src="home/index.js"></script>
 </body>
 </html>
