add experts section Relates #35

--- a/index.html
+++ b/index.html
@@ -97,6 +97,36 @@
     </div>
   </section>
   <!-- End Meals Section  -->
+   <!-- Start Our Experts Section -->
+   <section id="our-experts">
+    <h1 class="title-experts">Our Experts</h1>
+    <div class="chefs">
+    <div class="chef">
+      <img src="assets/Chef1.png" alt="">
+      <h4>Burak sheref</h4>
+    <p>Burak sheref is a Canadian chef, he was working in Mcdonald's
+         group restaurants, he has special recipes that he created,
+         he has a smiling face with the clients.</p>
+    </div>
+
+      <div class="chef">
+      <img src="assets/Chef2.png" alt="">
+      <h4>John ivan </h4>
+    <p>John ivan is a British chef, he was working in Mcdonald's
+         group restaurants, he has special recipes that he created,
+         he has a smiling face with the clients.</p>
+    </div>
+
+    <div class="chef">
+      <img src="assets/Chef3.png" alt="">
+      <h4>Suzaan clarke</h4>
+    <p>Suzan clarke is a American chef, he was working in Mcdonald's
+         group restaurants, he has special recipes that he created,
+          he has a smiling face with the clients.</p>
+    </div>
+    </div>
+</section>
+<!-- End Our Experts Section -->
 
     <script src="home/index.js"></script>
 </body>
