edit name image in experts section Relates #35

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <h1 class="title-experts">Our Experts</h1>
     <div class="chefs">
     <div class="chef">
-      <img src="assets/Chef1.png" alt="">
+      <img src="assets/chef1.png" alt="">
       <h4>Burak sheref</h4>
     <p>Burak sheref is a Canadian chef, he was working in Mcdonald's
          group restaurants, he has special recipes that he created,
@@ -110,7 +110,7 @@
     </div>
 
       <div class="chef">
-      <img src="assets/Chef2.png" alt="">
+      <img src="assets/chef2.png" alt="">
       <h4>John ivan </h4>
     <p>John ivan is a British chef, he was working in Mcdonald's
          group restaurants, he has special recipes that he created,
@@ -118,7 +118,7 @@
     </div>
 
     <div class="chef">
-      <img src="assets/Chef3.png" alt="">
+      <img src="assets/chef3.png" alt="">
       <h4>Suzaan clarke</h4>
     <p>Suzan clarke is a American chef, he was working in Mcdonald's
          group restaurants, he has special recipes that he created,
