--- a/index.html
+++ b/index.html
@@ -128,6 +128,20 @@
 </section>
 <!-- End Our Experts Section -->
 
+<!-- Start Contact us Section -->
+<section id="contact-us">
+  <div class="container">
+      <div class="title"><h2>Contact Us</h2></div>
+      <form>
+          <input type="text" class="field" placeholder="Your Name">
+          <input type="text" class="field" placeholder="Your Email">
+          <textarea placeholder="Your Message" class="field"></textarea>
+          <button class="btn">Submit</button>
+      </form>
+  </div>
+</section>
+<!-- End Contact us Section -->
+
     <script src="home/index.js"></script>
 </body>
 </html>
