Create Footer section related to #16

--- a/index.html
+++ b/index.html
@@ -128,6 +128,21 @@
 </section>
 <!-- End Our Experts Section -->
 
+
+<!-- Start Footer Section -->
+
+<footer>
+  <div class="footer-content">
+      <ul class="social-icons">
+          <li> <i class="fab fa-twitter"></i> </li>
+          <li> <i class="fab fa-facebook"></i> </li>
+          <li> <i class="fab fa-instagram"></i> </li>
+      </ul>
+      <p> @FoodCity </p>
+  </div>
+</footer>
+<!-- End Footer Section -->
+
     <script src="home/index.js"></script>
 </body>
 </html>
