--- a/index.html
+++ b/index.html
@@ -133,13 +133,19 @@
   <div class="container">
       <div class="title"><h2>Contact Us</h2></div>
       <form>
-          <input type="text" class="field" placeholder="Your Name">
-          <input type="text" class="field" placeholder="Your Email">
-          <textarea placeholder="Your Message" class="field"></textarea>
-          <button class="btn">Submit</button>
+          <input type="text" id="name" class="field" placeholder="Your Name">
+          <input type="text" id="email" class="field" placeholder="Your Email">
+          <textarea id="message" placeholder="Your Message" class="field"></textarea>
+          <button class="submitBtn">Submit</button>
       </form>
   </div>
 </section>
+
+<div class="messageThank">
+  <h1> Thanks for Your Feedback </h1> <br>
+  <i class="fas fa-heart"></i>
+</div>
+
 <!-- End Contact us Section -->
 
     <script src="home/index.js"></script>
