create a animated pop-up for sucessful submitt related to #26 #27

--- a/order/order.html
+++ b/order/order.html
@@ -43,6 +43,15 @@ rel="stylesheet"
     </div>
     </section>
   
+    <div class="bgOpacity">
+        <div class="successful_popup">
+            <i id="closeBtn" class="fas fa-times"></i>
+            <h1> Successful</h1>
+            <i class="fas fa-check-circle check"></i>
+        </div>
+    
+    </div>
+
     <script src="order.js"></script>
 </body>
 </html>
