add animation to pop-up related to #14

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="title"><h2>Contact Us</h2></div>
       <form>
           <input type="text" class="field" placeholder="Your Name">
-          <input type="text"  class="field" placeholder="Your Email">
+          <input type="text" id="user_email" class="field" placeholder="Your Email">
           <textarea  placeholder="Your Message" class="field"></textarea>
           <button class="submitBtn">Submit</button>
       </form>
