edit all classes names and make them more descriptive related to #14

--- a/index.html
+++ b/index.html
@@ -133,15 +133,15 @@
   <div class="container">
       <div class="title"><h2>Contact Us</h2></div>
       <form>
-          <input type="text" class="field" placeholder="Your Name">
-          <input type="text" id="user_email" class="field" placeholder="Your Email">
-          <textarea  placeholder="Your Message" class="field"></textarea>
+          <input type="text" class="name-field" placeholder="Your Name">
+          <input type="text" class="email-field" placeholder="Your Email">
+          <textarea  placeholder="Your Message" class="message-field"></textarea>
           <button class="submitBtn">Submit</button>
       </form>
   </div>
 </section>
 
-<div class="message_thank">
+<div class="message-thank">
   <h1> Thanks for Your Feedback </h1> <br>
   <i class="fas fa-heart"></i>
 </div>
