edit arrow right icon to left Relates #19

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -37,7 +37,7 @@
           <span id="count" class="count" style="display: block;">4</span>
           </div>
           <a href="../index.html" target="_self">
-            <i class="fas fa-long-arrow-alt-right arrow-right" ></i>
+            <i class="fas fa-long-arrow-alt-left arrow-left" ></i>
           </a>  
         </div>    
       </div>
