Update Home Page Relates #48

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             </div>
               <div class="navbar">
                 <div class="icons">
-                  <i class="fas fa-shopping-cart shoppingCart"></i>
+                  <div class="wholeCart">
+                    <i class="fas fa-shopping-cart shoppingCart"></i>
+                    <span id="count" class="count" style="display: block;">4</span>
+                    </div>
                   <i class="fas fa-hamburger burgerIcon"></i>
                 </div>
                   <ul class="navLinks">
@@ -72,27 +75,27 @@
       <div class="item breakfast">
         <i class="fas fa-egg-fried fa-3x"></i>
         <p>Breakfast</p>
-        <p>35</p>
+        <p>7</p>
       </div>
       <div class="item lunch">
         <i class="fas fa-turkey fa-3x"></i>
         <p>Lunch</p>
-        <p>40</p>
+        <p>42</p>
       </div>
       <div class="item dinner">
         <i class="fas fa-shish-kebab fa-3x"></i>
         <p>Dinner</p>
-        <p>39</p>
+        <p>36</p>
       </div>
       <div class="item drinks">
         <i class="fas fa-wine-glass-alt fa-3x"></i>
         <p>Drinks</p>
-        <p>25</p>
+        <p>50</p>
       </div>
       <div class="item desserts">
         <i class="fas fa-pie fa-3x"></i>
         <p>Desserts</p>
-        <p>30</p>
+        <p>50</p>
       </div>
     </div>
   </section>
