update file Relates #54

--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
             </div>
               <div class="navbar">
                 <div class="icons">
-                  <div class="wholeCart">
-                    <i class="fas fa-shopping-cart shoppingCart"></i>
-                    <span id="count" class="count" style="display: block;">4</span>
-                    </div>
                   <i class="fas fa-hamburger burgerIcon"></i>
                 </div>
                   <ul class="navLinks">
@@ -50,8 +46,8 @@
   <section id="home">
     <h2 class="title-home">Welcome to</h2>
     <h1 class="title-resturaunt">FoodCity</h1>
-    <button class="btn"><a href="./menu/menu.html">Go to Menu</a></button>
   </section>
+  <a href="./menu/menu.html" class="menuBtn" >Go to Menu</a>
   <!-- End Home Section -->
 
   <!-- Start About Us Section  -->
