--- a/menu/menu.html
+++ b/menu/menu.html
@@ -113,6 +113,6 @@
     <div id="root"></div>
   <!-- End Container Meals -->
 
-  <script src="menus.js"></script>
+  <script src="menu.js"></script>
 </body>
 </html>
